# OS_lab1

./: CMakeLists.txt  CMakePresets.json  Main.cpp  meson.build
shell/: Command.hpp  Shell.cpp  Shell.hpp
shell/input/: Input.cpp  Input.hpp
shell/output/: Output.cpp  Output.hpp
test1/: ema_search_str.cpp  helper.py  meson.build  patriarh.txt
test2/: meson.build  sort.cpp
